--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
+    "mongoose-paginate-v2": "^1.8.0",
     "nodemon": "^3.1.0"
   }
 }
