fix creat season sort yeartend

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-URL ="mongodb://localhost:27017/jwt"
+URL ="mongodb://localhost:27017/Football"
 PORT = 8000
 SECRETKEY_ACCESS_KEY= "ducdev"
 SECRETKEY_REFRESH_TOKEN = "duccccccc"
