--- a/backend/.env
+++ b/backend/.env
@@ -3,11 +3,14 @@ PORT = 8000
 SECRETKEY_ACCESS_KEY= "ducdev"
 SECRETKEY_REFRESH_TOKEN = "duccccccc"
 
-EMAIL_USER =c424aaca96166f
-EMAIL_PASSWORD=f32b16f954cadc
-EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_PORT=25 
+SERVER=http://localhost:8000
 
+# EMAIL_USER =c424aaca96166f
+# EMAIL_PASSWORD=f32b16f954cadc
+# EMAIL_HOST=sandbox.smtp.mailtrap.io
+# EMAIL_PORT=25 
+EMAIL_USER =ductrantad23@gmail.com
+EMAIL_PASSWORD =xtaioddvqgdsxhyn
 
 CLOUDINARY_NAME = dn483qk7l
 CLOUDINARY_KEY = 367331351564845
