--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "uniqid": "^5.4.0"
   }
 }
