--- a/backend/.env
+++ b/backend/.env
@@ -15,3 +15,5 @@ EMAIL_PASSWORD =xtaioddvqgdsxhyn
 CLOUDINARY_NAME = dn483qk7l
 CLOUDINARY_KEY = 367331351564845
 CLOUDINARY_SECRET = bZAlYRapsWv6WfSeM3FNnQcQ_yk
+
+PASS=121212
