--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,20 @@
-URL ="mongodb://localhost:27017/node_football"
+
+URL ="mongodb://localhost:27017/Football"
 PORT = 8000
 SECRETKEY_ACCESS_KEY= "ducdev"
 SECRETKEY_REFRESH_TOKEN = "duccccccc"
 
-EMAIL_USER =c424aaca96166f
-EMAIL_PASSWORD=f32b16f954cadc
-EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_PORT=25 
+SERVER=http://localhost:8000
+
+# EMAIL_USER =c424aaca96166f
+# EMAIL_PASSWORD=f32b16f954cadc
+# EMAIL_HOST=sandbox.smtp.mailtrap.io
+# EMAIL_PORT=25 
+EMAIL_USER =ductrantad23@gmail.com
+EMAIL_PASSWORD =xtaioddvqgdsxhyn
+
+CLOUDINARY_NAME = dn483qk7l
+CLOUDINARY_KEY = 367331351564845
+CLOUDINARY_SECRET = bZAlYRapsWv6WfSeM3FNnQcQ_yk
+
+PASS=121212
